--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,15 @@ name: spy divergence agent
 
 on:
   schedule:
-    # Runs every 5 minutes between 9:30 AM and 4:00 PM EST (Mon-Fri)
-    # UTC conversion: 9:30 AM - 4:00 PM EST = 1:30 PM - 8:00 PM UTC (13:30-20:00)
-    # Using 13-20 to cover 1 PM - 8 PM UTC range, which includes 9:30 AM - 4:00 PM EST
-    - cron: '*/5 13-20 * * 1-5'
+    # Hourly runs at :30 ET from 9:30 through 15:30 (hourly checks during regular session)
+    # Two entries cover DST/standard time differences:
+    # - EDT (UTC-4): 9:30-15:30 ET = 13:30-19:30 UTC
+    - cron: '30 13-19 * * 1-5'
+    # - EST (UTC-5): 9:30-15:30 ET = 14:30-20:30 UTC
+    - cron: '30 14-20 * * 1-5'
+    # Optional single run at market close (16:00 ET). Cover both DST offsets:
+    - cron: '0 20 * * 1-5'  # 16:00 ET during EDT (UTC-4)
+    - cron: '0 21 * * 1-5'  # 16:00 ET during EST (UTC-5)
   workflow_dispatch: # Allows you to run it manually to test
 
 jobs:
