Update Telegram token secret for market analysis

--- a/.github/workflows/market-daily-analysis.yml
+++ b/.github/workflows/market-daily-analysis.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run AI Bot
         env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN_MKT_ANALYSIS }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: python market_bot.py
