update path to projects for workflows

--- a/.github/workflows/market-daily-analysis.yml
+++ b/.github/workflows/market-daily-analysis.yml
@@ -28,4 +28,4 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN_MKT_ANALYSIS }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        run: python market-daily-analysis.py
+        run: python projects/market-daily-analysis.py
