--- a/.github/workflows/market-divergence-scanner.yml
+++ b/.github/workflows/market-divergence-scanner.yml
@@ -130,7 +130,7 @@ jobs:
       if: steps.market_check.outputs.is_open == 'true' || steps.manual_override.outputs.is_open == 'true'
       run: |
         echo "Starting scanner at $(date)"
-        python projects/spy-divergence.py
+        python projects/market-divergence-scanner.py
         echo "Scanner completed at $(date)"
       continue-on-error: false
     
