--- a/.github/workflows/mean-reversion-signals.yml
+++ b/.github/workflows/mean-reversion-signals.yml
@@ -1,10 +1,14 @@
-name: Correlation Breakdown Scanner
+name: Mean Reversion Scanner
 
 on:
   schedule:
-    # Daily 3 PM ET
-    - cron: '0 19 * * 1-5'  # EDT
-    - cron: '0 20 * * 1-5'  # EST
+    # 3x daily: 10 AM, 1 PM, 3:45 PM ET
+    - cron: '0 14 * * 1-5'   # 10 AM EDT
+    - cron: '0 17 * * 1-5'   # 1 PM EDT
+    - cron: '45 19 * * 1-5'  # 3:45 PM EDT
+    - cron: '0 15 * * 1-5'   # 10 AM EST
+    - cron: '0 18 * * 1-5'   # 1 PM EST
+    - cron: '45 20 * * 1-5'  # 3:45 PM EST
   workflow_dispatch: {}
 
 env:
@@ -24,4 +28,4 @@ jobs:
       - env:
           TELEGRAM_TOKEN_DIVERGENCE: ${{ secrets.TELEGRAM_TOKEN_DIVERGENCE }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
-        run: python projects/correlation-breakdown-scanner.py
+        run: python projects/mean-reversion-signals.py
