--- a/.github/workflows/breakout-signals.yml
+++ b/.github/workflows/breakout-signals.yml
@@ -1,17 +1,21 @@
-name: Gap Scanner
+name: Breakout Scanner
 
 on:
   schedule:
-    # Run at 8:00 AM ET (pre-market)
-    - cron: '0 12 * * 1-5'  # EDT
-    - cron: '0 13 * * 1-5'  # EST
-  workflow_dispatch: {}
+    # Run twice daily during market hours (Eastern Time)
+    # 10:00 AM ET = 14:00 UTC (DST) / 15:00 UTC (Standard)
+    # 3:30 PM ET = 19:30 UTC (DST) / 20:30 UTC (Standard)
+    - cron: '0 14 * * 1-5'   # Morning scan (EDT)
+    - cron: '30 19 * * 1-5'  # End of day scan (EDT)
+    - cron: '0 15 * * 1-5'   # Morning scan (EST)
+    - cron: '30 20 * * 1-5'  # End of day scan (EST)
+  workflow_dispatch: {}  # Manual trigger
 
 env:
   PYTHON_VERSION: '3.11'
 
 jobs:
-  run-gap-scanner:
+  run-breakout-scanner:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -27,8 +31,8 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
-      - name: Run gap scanner
+      - name: Run breakout scanner
         env:
           TELEGRAM_TOKEN_DIVERGENCE: ${{ secrets.TELEGRAM_TOKEN_DIVERGENCE }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
-        run: python projects/gap-scanner.py
+        run: python projects/breakout-signals.py
