--- a/.github/workflows/orb-signals.yml
+++ b/.github/workflows/orb-signals.yml
@@ -37,4 +37,4 @@ jobs:
           TELEGRAM_TOKEN_DIVERGENCE: ${{ secrets.TELEGRAM_TOKEN_DIVERGENCE }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
         run: |
-          python projects/orb-scanner.py
+          python projects/orb-signals.py
