--- a/.github/workflows/pairs-trading-signals.yml
+++ b/.github/workflows/pairs-trading-signals.yml
@@ -1,12 +1,12 @@
-name: Golden Death Cross Scanner
+name: Pairs Trading Scanner
 
 on:
   schedule:
-    # Runs daily at 4 PM ET (after market close for clean signals)
-    # EDT (UTC-4): 20:00 UTC
+    # Runs daily at 3 PM ET (end of day positioning)
+    # EDT (UTC-4): 19:00 UTC
+    - cron: '0 19 * * 1-5'
+    # EST (UTC-5): 20:00 UTC
     - cron: '0 20 * * 1-5'
-    # EST (UTC-5): 21:00 UTC
-    - cron: '0 21 * * 1-5'
   workflow_dispatch:
 
 jobs:
@@ -27,9 +27,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
-      - name: Run Golden/Death Cross Scanner
+      - name: Run Pairs Trading Scanner
         env:
           TELEGRAM_TOKEN_DIVERGENCE: ${{ secrets.TELEGRAM_TOKEN_DIVERGENCE }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
         run: |
-          python projects/golden-cross-scanner.py
+          python projects/pairs-trading-signals.py
