update new signals

--- a/.github/workflows/earnings-signals.yml
+++ b/.github/workflows/earnings-signals.yml
@@ -29,6 +29,6 @@ jobs:
 
       - name: Run earnings scanner
         env:
-          TELEGRAM_TOKEN_DIVERGENCE: ${{ secrets.TELEGRAM_TOKEN_DIVERGENCE }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python projects/earnings-signals.py
