--- a/.github/workflows/cup-handle-signals.yml
+++ b/.github/workflows/cup-handle-signals.yml
@@ -29,7 +29,7 @@ jobs:
       
       - name: Run Cup & Handle Scanner
         env:
-          TELEGRAM_TOKEN_DIVERGENCE: ${{ secrets.TELEGRAM_TOKEN_DIVERGENCE }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           python projects/cup-handle-signals.py
