--- a/.github/workflows/earnings-surprise-signals.yml
+++ b/.github/workflows/earnings-surprise-signals.yml
@@ -1,4 +1,4 @@
-name: PEAD Scanner
+name: Earnings Surprise Signals (PEAD)
 
 on:
   schedule:
@@ -19,10 +19,14 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      - run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - env:
+      
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      
+      - name: Run Earnings Surprise Scanner
+        env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: python projects/pead-signals.py
+          CHAT_ID: ${{ secrets.CHAT_ID }}
+          FMP_API_KEY: ${{ secrets.FMP_API_KEY }}
+        run: |
+          python projects/earnings-surprise-signals.py
