--- a/.github/workflows/orb-signals.yml
+++ b/.github/workflows/orb-signals.yml
@@ -34,7 +34,7 @@ jobs:
       
       - name: Run ORB Scanner
         env:
-          TELEGRAM_TOKEN_DIVERGENCE: ${{ secrets.TELEGRAM_TOKEN_DIVERGENCE }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           python projects/orb-signals.py
