--- a/.github/workflows/unusual-options-signals.yml
+++ b/.github/workflows/unusual-options-signals.yml
@@ -32,8 +32,8 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
-      - name: Run unusual options scanner
+      - name: Run Unusual Options Activity Scanner
         env:
-          TELEGRAM_TOKEN_DIVERGENCE: ${{ secrets.TELEGRAM_TOKEN_DIVERGENCE }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python projects/unusual-options-signals.py
