update all telegram_chat_id

--- a/.github/workflows/market-daily-analysis.yml
+++ b/.github/workflows/market-daily-analysis.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Run Market Daily Analysis
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: python projects/market-daily-analysis.py
