--- a/.github/workflows/sector-rotation-signals.yml
+++ b/.github/workflows/sector-rotation-signals.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run Sector Rotation Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           FMP_API_KEY: ${{ secrets.FMP_API_KEY }}
         run: |
           python projects/sector-rotation-signals.py
