change back all to CHAT_ID

--- a/.github/workflows/breakout-signals.yml
+++ b/.github/workflows/breakout-signals.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Run Breakout Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python projects/breakout-signals.py
