--- a/.github/workflows/golden-cross-signals.yml
+++ b/.github/workflows/golden-cross-signals.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Run Golden/Death Cross Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: |
           python projects/golden-cross-signals.py
