--- a/.github/workflows/pead-signals.yml
+++ b/.github/workflows/pead-signals.yml
@@ -24,5 +24,5 @@ jobs:
           pip install -r requirements.txt
       - env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python projects/pead-signals.py
