--- a/.github/workflows/spy-divergence.yml
+++ b/.github/workflows/spy-divergence.yml
@@ -52,7 +52,7 @@ env:
   PYTHON_VERSION: '3.11'
   TZ: 'America/New_York'
   TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-  TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+  CHAT_ID: ${{ secrets.CHAT_ID }}
   
 jobs:
   run-scanner:
