--- a/.github/workflows/support-resistance-signals.yml
+++ b/.github/workflows/support-resistance-signals.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Run Support/Resistance Bounce Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python projects/support-resistance-signals.py
