--- a/.github/workflows/unusual-options-signals.yml
+++ b/.github/workflows/unusual-options-signals.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Run Unusual Options Activity Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python projects/unusual-options-signals.py
