--- a/.github/workflows/correlation-breakdown-signals.yml
+++ b/.github/workflows/correlation-breakdown-signals.yml
@@ -23,5 +23,5 @@ jobs:
           pip install -r requirements.txt
       - env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python projects/correlation-breakdown-signals.py
