--- a/.github/workflows/cup-handle-signals.yml
+++ b/.github/workflows/cup-handle-signals.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Run Cup & Handle Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: |
           python projects/cup-handle-signals.py
