--- a/.github/workflows/dark-pool-signals.yml
+++ b/.github/workflows/dark-pool-signals.yml
@@ -25,5 +25,5 @@ jobs:
           pip install -r requirements.txt
       - env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python projects/dark-pool-signals.py
