--- a/.github/workflows/earnings-signals.yml
+++ b/.github/workflows/earnings-signals.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Run earnings scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python projects/earnings-signals.py
