--- a/.github/workflows/earnings-surprise-signals.yml
+++ b/.github/workflows/earnings-surprise-signals.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run Earnings Surprise Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
           FMP_API_KEY: ${{ secrets.FMP_API_KEY }}
         run: |
           python projects/earnings-surprise-signals.py
