--- a/.github/workflows/gap-signals.yml
+++ b/.github/workflows/gap-signals.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Run Gap Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python projects/gap-signals.py
