--- a/.github/workflows/insider-trading-signals.yml
+++ b/.github/workflows/insider-trading-signals.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run Insider Trading Cluster Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
           FMP_API_KEY: ${{ secrets.FMP_API_KEY }}
         run: |
           python projects/insider-trading-signals.py
