--- a/.github/workflows/insider-trading-tracker.yml
+++ b/.github/workflows/insider-trading-tracker.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Run Insider Trading Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python projects/insider-trading-tracker.py
