--- a/.github/workflows/institutional-flow-signals.yml
+++ b/.github/workflows/institutional-flow-signals.yml
@@ -29,6 +29,6 @@ jobs:
       env:
         FMP_API_KEY: ${{ secrets.FMP_API_KEY }}
         TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        CHAT_ID: ${{ secrets.CHAT_ID }}
       run: |
         python projects/institutional-flow-signals.py
