--- a/.github/workflows/market-pulse-signals.yml
+++ b/.github/workflows/market-pulse-signals.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Run Market Pulse Scanner
         env:
           TELEGRAM_TOKEN_MKT_ANALYSIS: ${{ secrets.TELEGRAM_TOKEN_MKT_ANALYSIS }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: python projects/market-pulse-signals.py
