--- a/.github/workflows/orb-signals.yml
+++ b/.github/workflows/orb-signals.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Run ORB Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: |
           python projects/orb-signals.py
