--- a/.github/workflows/pairs-trading-signals.yml
+++ b/.github/workflows/pairs-trading-signals.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Run Pairs Trading Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: |
           python projects/pairs-trading-signals.py
