--- a/.github/workflows/sector-rotation-tracker.yml
+++ b/.github/workflows/sector-rotation-tracker.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Run Sector Rotation Tracker
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python projects/sector-rotation-tracker.py
