--- a/.github/workflows/smart-money-flow-signals.yml
+++ b/.github/workflows/smart-money-flow-signals.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Run Smart Money Flow Scanner
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python projects/smart-money-flow-signals.py
