--- a/.github/workflows/institutional-risk-signal.yml
+++ b/.github/workflows/institutional-risk-signal.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install yfinance pandas fredapi requests python-dotenv lxml html5lib beautifulsoup4
+          pip install yfinance pandas fredapi requests python-dotenv lxml html5lib beautifulsoup4 schedule
       
       - name: Create .env file
         run: |
