--- a/.github/workflows/institutional-risk-signal.yml
+++ b/.github/workflows/institutional-risk-signal.yml
@@ -1,3 +1,12 @@
+# Institutional Risk Signal - Daily automated assessment
+# 
+# Required GitHub Secrets (Settings → Secrets and variables → Actions):
+#   - FRED_API_KEY: Get from https://fred.stlouisfed.org/docs/api/api_key.html
+#   - TELEGRAM_TOKEN_RISK: Your Telegram bot token from @BotFather
+#   - CHAT_ID: Your Telegram channel/chat ID
+#
+# Schedule: Daily at 9:30 PM NYSE time (after market close)
+
 name: Institutional Risk Signal
 
 on:
@@ -28,9 +37,9 @@ jobs:
       
       - name: Create .env file
         run: |
-          echo "FRED_API_KEY=${{ secrets.FRED_API_KEY }}" >> .env
-          echo "TELEGRAM_TOKEN_RISK=${{ secrets.TELEGRAM_TOKEN_RISK }}" >> .env
-          echo "CHAT_ID=${{ secrets.CHAT_ID }}" >> .env
+          echo "FRED_API_KEY=${{ secrets.FRED_API_KEY }}" >> projects/.env
+          echo "TELEGRAM_TOKEN_RISK=${{ secrets.TELEGRAM_TOKEN_RISK }}" >> projects/.env
+          echo "CHAT_ID=${{ secrets.CHAT_ID }}" >> projects/.env
       
       - name: Run Risk Assessment
         run: |
