--- a/.github/workflows/institutional-risk-signal.yml
+++ b/.github/workflows/institutional-risk-signal.yml
@@ -37,12 +37,21 @@ jobs:
       
       - name: Create .env file
         run: |
-          echo "FRED_API_KEY=${{ secrets.FRED_API_KEY }}" >> projects/.env
-          echo "TELEGRAM_TOKEN_RISK=${{ secrets.TELEGRAM_TOKEN_RISK }}" >> projects/.env
-          echo "CHAT_ID=${{ secrets.CHAT_ID }}" >> projects/.env
+          cd projects
+          echo "FRED_API_KEY=${{ secrets.FRED_API_KEY }}" >> .env
+          echo "TELEGRAM_TOKEN_RISK=${{ secrets.TELEGRAM_TOKEN_RISK }}" >> .env
+          echo "CHAT_ID=${{ secrets.CHAT_ID }}" >> .env
+          echo "✅ Created .env file in projects directory"
+          cat .env | head -1
+          cd ..
       
       - name: Run Risk Assessment
         run: |
+          echo "🔍 Checking .env file..."
+          ls -la projects/.env || echo "⚠️  .env not found"
+          echo "🐍 Python version:"
+          python --version
+          echo "📦 Running script..."
           python projects/instituitional-risk-signal.py
         env:
           TZ: 'America/New_York'
