--- a/.github/workflows/21-market-pulse-signals.yml
+++ b/.github/workflows/21-market-pulse-signals.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run Market Pulse Scanner
         env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_TOKEN_MARKET: ${{ secrets.TELEGRAM_TOKEN_MARKET }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: python projects/21-market-pulse-signals.py
