Add risk data for January 6, 2026, and update reports
- Updated `risk_history.json` with multiple entries for January 6, 2026, including VIX structure and VIXY/VXX ratio.
- Revised `risk_report_20260106.txt` for improved formatting and clarity, maintaining the same data points.
- Introduced `gemini_analysis_20260106.txt` for CIO interpretation, summarizing market conditions and recommendations.
- Created `backwardation-test-today.py` to analyze VIX and VXX data, determining market structure based on their ratio.

--- a/.github/workflows/institutional-risk-signal.yml
+++ b/.github/workflows/institutional-risk-signal.yml
@@ -2,6 +2,8 @@
 # 
 # Required GitHub Secrets (Settings → Secrets and variables → Actions):
 #   - FRED_API_KEY: Get from https://fred.stlouisfed.org/docs/api/api_key.html
+#   - ANTHROPIC_API_KEY: Get from https://console.anthropic.com/settings/keys
+#   - GEMINI_API_KEY: Get from https://aistudio.google.com/app/apikey
 #   - TELEGRAM_TOKEN_RISK: Your Telegram bot token from @BotFather
 #   - CHAT_ID: Your Telegram channel/chat ID
 #
@@ -33,12 +35,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install yfinance pandas fredapi requests python-dotenv lxml html5lib beautifulsoup4 schedule
+          pip install yfinance pandas fredapi requests python-dotenv lxml html5lib beautifulsoup4 schedule google-generativeai
       
       - name: Create .env file
         run: |
           cd projects
           echo "FRED_API_KEY=${{ secrets.FRED_API_KEY }}" >> .env
+          echo "ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}" >> .env
+          echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" >> .env
           echo "TELEGRAM_TOKEN_RISK=${{ secrets.TELEGRAM_TOKEN_RISK }}" >> .env
           echo "CHAT_ID=${{ secrets.CHAT_ID }}" >> .env
           echo "✅ Created .env file in projects directory"
