--- a/.github/workflows/fetch-ibkr-positions.yml
+++ b/.github/workflows/fetch-ibkr-positions.yml
@@ -48,6 +48,8 @@ jobs:
           echo "IBKR_QUERY_ID_HK=${{ secrets.IBKR_QUERY_ID_HK }}" >> .env
           echo "IBKR_FLEX_TOKEN_AL=${{ secrets.IBKR_FLEX_TOKEN_AL }}" >> .env
           echo "IBKR_QUERY_ID_AL=${{ secrets.IBKR_QUERY_ID_AL }}" >> .env
+          echo "IBKR_CASH_QUERY_ID_HK=${{ secrets.IBKR_CASH_QUERY_ID_HK }}" >> .env
+          echo "IBKR_CASH_QUERY_ID_AL=${{ secrets.IBKR_CASH_QUERY_ID_AL }}" >> .env
           echo "TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }}" >> .env
           echo "CHAT_ID=${{ secrets.CHAT_ID }}" >> .env
           echo "✅ Created .env file in projects directory"
@@ -103,6 +105,7 @@ jobs:
         if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: ibkr-positions-${{ github.run_number }}
+          name: ibkr-positions
           path: projects/fetch-ibkr-positions.xlsx
+          retention-days: 7
           retention-days: 30
