--- a/.github/workflows/institutional-risk-signal.yml
+++ b/.github/workflows/institutional-risk-signal.yml
@@ -38,7 +38,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install yfinance pandas fredapi requests python-dotenv lxml html5lib beautifulsoup4 schedule google-generativeai
+          pip install yfinance pandas fredapi requests python-dotenv lxml html5lib beautifulsoup4 schedule google-generativeai openpyxl anthropic
+      
+      - name: Download IBKR positions from artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ibkr-positions
+          path: projects/
+        continue-on-error: true
       
       - name: Create .env file
         run: |
@@ -62,6 +69,15 @@ jobs:
           python projects/instituitional-risk-signal.py
         env:
           TZ: 'America/New_York'
+      
+      - name: Commit risk_history.json back to repo
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "GitHub Actions"
+          git add projects/risk_history.json
+          git diff --staged --quiet || git commit -m "Update risk history [$(date +'%Y-%m-%d %H:%M')]"
+          git push
+        continue-on-error: true
       
       - name: Upload risk report
         uses: actions/upload-artifact@v4
