--- a/.github/workflows/fetch-ibkr-positions.yml
+++ b/.github/workflows/fetch-ibkr-positions.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas openpyxl requests python-dotenv
+          pip install -r requirements.txt
       
       - name: Create .env file
         run: |
