--- a/.github/workflows/institutional-risk-signal.yml
+++ b/.github/workflows/institutional-risk-signal.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install yfinance pandas fredapi requests python-dotenv lxml html5lib beautifulsoup4 schedule google-generativeai openpyxl anthropic
+          pip install -r requirements.txt
       
       - name: Download IBKR positions from artifact
         uses: actions/download-artifact@v4
