--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,31 @@
-yfinance==0.2.36
-python-dotenv==1.0.1
+# Core dependencies with pinned versions
+# Updated: 2026-01-22
+
+# Data & Market APIs
+yfinance==1.0.0
+fredapi==0.5.2
+pandas==2.3.3
+numpy==2.4.1
+
+# Web & API
 requests==2.32.3
+python-dotenv==1.0.1
+
+# AI & ML
+google-generativeai==0.4.1
+anthropic==0.43.1
+
+# Data Processing
+openpyxl==3.1.5
+beautifulsoup4==4.14.3
+lxml==6.0.2
+html5lib==1.1
+
+# Statistics
+scipy==1.17.0
+statsmodels==0.14.6
+
+# Utilities
+schedule==1.2.2
 pytz==2024.1
 feedparser==6.0.10
-google-generativeai==0.4.1
-pandas
-numpy
-scipy
-statsmodels
