--- a/.github/workflows/decision-matrix-alert.yml
+++ b/.github/workflows/decision-matrix-alert.yml
@@ -9,10 +9,14 @@ on:
 jobs:
   decision-matrix:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Allow pushing changes back to repo
     
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
         with:
           fetch-depth: 0  # Need full history for risk_history.json
       
