--- a/.github/workflows/institutional-risk-signal.yml
+++ b/.github/workflows/institutional-risk-signal.yml
@@ -24,10 +24,14 @@ on:
 jobs:
   risk-assessment:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Allow pushing changes back to repo
     
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
