--- a/.github/workflows/portfolio-risk-var-cvar.yml
+++ b/.github/workflows/portfolio-risk-var-cvar.yml
@@ -26,10 +26,14 @@ on:
 jobs:
   risk-analysis:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Allow pushing changes back to repo
     
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
