refactor: Clean up workflow inconsistencies and remove redundant code
Major fixes:
- Remove redundant artifact downloads (Excel already in repo after commit)
- Fix risk_history.json path (root, not projects/)
- Standardize git user name to 'github-actions[bot]'
- Remove duplicate/unnecessary steps

Affected workflows:
- fetch-ibkr-positions.yml: Standardized git user
- institutional-risk-signal.yml: Fixed risk_history path, removed artifact download
- portfolio-risk-var-cvar.yml: Removed artifact download, standardized git user

Benefits:
- Faster workflow execution (no unnecessary downloads)
- Consistent file paths across all workflows
- Cleaner, more maintainable code

--- a/.github/workflows/fetch-ibkr-positions.yml
+++ b/.github/workflows/fetch-ibkr-positions.yml
@@ -90,7 +90,7 @@ jobs:
         if: success()
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "GitHub Actions Bot"
+          git config --local user.name "github-actions[bot]"
           git add projects/fetch-ibkr-positions.xlsx
           git diff --staged --quiet || git commit -m "Update IBKR positions Excel (automated)"
           git push
