--- a/.github/workflows/institutional-risk-signal.yml
+++ b/.github/workflows/institutional-risk-signal.yml
@@ -44,13 +44,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
-      - name: Download IBKR positions from artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: ibkr-positions
-          path: projects/
-        continue-on-error: true
-      
       - name: Create .env file
         run: |
           cd projects
@@ -77,8 +70,8 @@ jobs:
       - name: Commit risk_history.json back to repo
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "GitHub Actions"
-          git add projects/risk_history.json
+          git config --local user.name "github-actions[bot]"
+          git add risk_history.json
           git diff --staged --quiet || git commit -m "Update risk history [$(date +'%Y-%m-%d %H:%M')]"
           git push
         continue-on-error: true
